# Production-grade-AI-Agent

./: README.md  custom_types.py  main.py  newsletter_service.py  prompts.py  pyproject.toml  run.py  sample.py
newsletters/: 3D_Print_20251218_121709_175045e8.md  5G_20251218_121659_412f1c59.md  5G_20251218_121701_1944184e.md  5G_20251218_121701_2de38159.md  5G_20251218_121704_a38579cb.md  AI_20251218_121659_aa3018de.md  AI_20251218_121700_4d23b937.md  AI_20251218_121703_16f3ebed.md  AI_20251218_121704_538f050d.md  AI_20251218_121704_f5c9dba1.md  AI_20251218_121708_7ac7f30a.md  AI_20251218_121721_d667d347.md  AR_20251218_121659_043abb61.md  Agriculture_20251218_121659_9db1c8ee.md  Batteries_20251218_121702_8415e812.md  Batteries_20251218_121705_55e5ea64.md  Biotech_20251218_121700_a427d1cd.md  Biotech_20251218_121701_0bba9c19.md  Blockchain_20251218_121700_8655e2bb.md  Carbon_20251218_121704_aa9de908.md  Cities_20251218_121659_8be6d45c.md  Cities_20251218_121701_7d2a901f.md  Cities_20251218_121703_a4d7d1dd.md  Climate_Change_20251218_121702_e29c23fc.md  Cloud_20251218_121700_2d515a8d.md  Crypto_20251218_121700_4886ea4a.md  Crypto_20251218_121700_c117458c.md  Crypto_20251218_121703_6517e1b8.md  Digital_Art_20251218_121704_00c9f8e5.md  Drones_20251218_121700_cb8cb4ac.md  Drones_20251218_121703_fa284f55.md  Drones_20251218_121706_2bd25e0a.md  Drones_20251218_121707_b44606da.md  EVs_20251218_121703_e49a1bc5.md  EdTech_20251218_121657_5012c81a.md  EdTech_20251218_121657_80f5f4ae.md  EdTech_20251218_121700_0ca49c2c.md  EdTech_20251218_121701_d8b802a3.md  (+50 more)
