[project]
name = "production-grade-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "inngest>=0.5.13",
    "langchain-brightdata>=0.1.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
